change color button send contact page

--- a/app/Resources/views/contact.html.twig
+++ b/app/Resources/views/contact.html.twig
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <textarea class="form-control" id="inputMessage" placeholder="Message" rows="4" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Envoyer</button>
+                <button type="submit" class="btn btn-primary submit-btn-contact">Envoyer</button>
             </form>
 
         </div>
