add profile's pages

--- a/app/Resources/views/panier.html.twig
+++ b/app/Resources/views/panier.html.twig
@@ -54,7 +54,7 @@
                     </div>
                 </td>
                 <td>99.90€</td>
-                <div>
+                <div class="item-price-cross-panier">
                     <td><strong>99.90€</strong></td>
                     <td><a class="cross-item-panier">X</a></td>
                 </div>
