deplacememnt bouton retour profil

--- a/app/Resources/views/user_info.html.twig
+++ b/app/Resources/views/user_info.html.twig
@@ -4,7 +4,7 @@
 
     <h3 class="title-homme">Mon compte \ Général</h3>
 
-    <a href="{{ path('need_user') }}"><p class="item-back-user"><img id="arrow-left-user" src="{{ asset('img/arrow-left.png') }}">Revenir à mon compte</p></a>
+    <a href="{{ path('need_user') }}"><p class="item-back-user title-homme"><img id="arrow-left-user" src="{{ asset('img/arrow-left.png') }}">Revenir à mon compte</p></a>
 
     <form class="container-form-update-info-user">
         <fieldset class="form-group">
