i don't know what i did

--- a/app/Resources/views/user_info.html.twig
+++ b/app/Resources/views/user_info.html.twig
@@ -7,10 +7,10 @@
     <a href="{{ path('need_user') }}"><p class="item-back-user title-homme"><img id="arrow-left-user" src="{{ asset('img/arrow-left.png') }}">Revenir à mon compte</p></a>
 
     <form class="container-form-update-info-user">
-        <fieldset class="form-group">
+        <fieldset class="form-group form-user-info">
             <div class="row">
-                <legend class="col-form-label col-sm-2 pt-0 title-user-info">Titre</legend>
-                <div class="col-sm-10">
+                <legend class="col-form-label col-sm-2 pt-0 title-user-info align-user">Titre</legend>
+                <div class="col-sm-10 align-user">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="Femme" checked>
                         <label class="form-check-label" for="gridRadios1">
