add requetes sql join and link

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -24,7 +24,7 @@
         <div class="items-nav-footer">
             <a href="{{ path('need_home') }}"><h5>Accueil</h5></a>
             <div class="cache">
-                <a href="{{ path('need_homme') }}"><h5>Homme</h5></a>
+                <a href="{{ path('need_all_categories') }}"><h5>Homme</h5></a>
                 <ul>
                     <a href=""><li>Doudounes</li></a>
                     <a href=""><li>Vestes</li></a>
