--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -20,7 +20,7 @@
 
             </li>
             <li class="nav-item active dropdown">
-                <a href="{{ path('need_homme') }}" class="nav-link dropdown"><span>Homme</span></a>
+                <a href="{{ path('need_all_categories') }}" class="nav-link dropdown"><span>Homme</span></a>
                 <div class="dropdown-menu menu" aria-labelledby="navbarDropdownMenuLink">
                     <div><a class="dropdown-item" href="#">Doudounes</a></div>
                     <div><a class="dropdown-item" href="#">Vestes</a></div>
@@ -34,7 +34,7 @@
                 </div>
             </li>
             <li class="nav-item active dropdown">
-                <a href="#" class="nav-link dropdown"><span>Femme</span></a>
+                <a href="{{ path('need_femme') }}" class="nav-link dropdown"><span>Femme</span></a>
                 <div class="dropdown-menu menu" aria-labelledby="navbarDropdownMenuLink">
                     <div><a class="dropdown-item" href="#">Doudounes</a></div>
                     <div><a class="dropdown-item" href="#">Vestes</a></div>
