--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -24,31 +24,31 @@
         <div class="items-nav-footer">
             <a href="{{ path('need_home') }}"><h5>Accueil</h5></a>
             <div class="cache">
-                <a href="{{ path('need_all_categories') }}"><h5>Homme</h5></a>
+                <a href="{{ path('need_homme') }}"><h5>Homme</h5></a>
                 <ul>
-                    <a href=""><li>Doudounes</li></a>
-                    <a href=""><li>Vestes</li></a>
-                    <a href=""><li>Pulls/Sweats</li></a>
-                    <a href=""><li>Chemises</li></a>
-                    <a href=""><li>T-shirts</li></a>
-                    <a href=""><li>Chaussures</li></a>
-                    <a href=""><li>Jeans/Chinos</li></a>
-                    <a href=""><li>Shorts</li></a>
-                    <a href=""><li>Accessoires</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'doudounes'}) }}"><li>Doudounes</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'vestes'}) }}"><li>Vestes</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'pulls-sweats'}) }}"><li>Pulls/Sweats</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'chemises'}) }}"><li>Chemises</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 't-shirts'}) }}"><li>T-shirts</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'chaussures'}) }}"><li>Chaussures</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'jeans-chinos'}) }}"><li>Jeans/Chinos</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'shorts'}) }}"><li>Shorts</li></a>
+                    <a href="{{ path('need_homme_filter', {'filter': 'accessoires'}) }}"><li>Accessoires</li></a>
                 </ul>
             </div>
             <div class="cache">
-                <a href=""><h5>Femme</h5></a>
+                <a href="{{ path('need_femme') }}"><h5>Femme</h5></a>
                 <ul>
-                    <a href=""><li>Doudounes</li></a>
-                    <a href=""><li>Vestes</li></a>
-                    <a href=""><li>Pulls/Gilets</li></a>
-                    <a href=""><li>Chemises/Tops</li></a>
-                    <a href=""><li>Shorts</li></a>
-                    <a href=""><li>Chaussures</li></a>
-                    <a href=""><li>Jeans/Chinos</li></a>
-                    <a href=""><li>Robes/Jupes</li></a>
-                    <a href=""><li>Accessoires</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'doudounes'}) }}"><li>Doudounes</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'vestes'}) }}"><li>Vestes</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'pulls-gilets'}) }}"><li>Pulls/Gilets</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'chemises-tops'}) }}"><li>Chemises/Tops</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'shorts'}) }}"><li>Shorts</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'chaussures'}) }}"><li>Chaussures</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'jeans-chinos'}) }}"><li>Jeans/Chinos</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'robes-jupes'}) }}"><li>Robes/Jupes</li></a>
+                    <a href="{{ path('need_femme_filter', {'filter': 'accessoires'}) }}"><li>Accessoires</li></a>
                 </ul>
             </div>
             <div class="cache">
