--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -90,40 +90,52 @@
             </div>
             <div class="card-content-categories">
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_1.jpg') }}"> </p>
-                    <div>
-                        <p>Chaussures</p>
-                    </div>
+                    <a href="{{ path('need_homme_filter', {'filter': 'chaussures'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_1.jpg') }}"> </p>
+                        <div>
+                            <p>Chaussures</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_2.jpg') }}"> </p>
-                    <div>
-                        <p>Jeans/Chinos</p>
-                    </div>
+                    <a href="{{ path('need_homme_filter', {'filter': 'jeans-chinos'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_2.jpg') }}"> </p>
+                        <div>
+                            <p>Jeans/Chinos</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_3.jpg') }}"> </p>
-                    <div>
-                        <p>Vestes</p>
-                    </div>
+                    <a href="{{ path('need_homme_filter', {'filter': 'vestes'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_3.jpg') }}"> </p>
+                        <div>
+                            <p>Vestes</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_4.jpg') }}"> </p>
-                    <div>
-                        <p>Pulls/Sweats</p>
-                    </div>
+                    <a href="{{ path('need_homme_filter', {'filter': 'pulls-sweats'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_4.jpg') }}"> </p>
+                        <div>
+                            <p>Pulls/Sweats</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_5.jpeg') }}"> </p>
-                    <div>
-                        <p>T-shirts</p>
-                    </div>
+                    <a href="{{ path('need_homme_filter', {'filter': 't-shirts'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_5.jpeg') }}"> </p>
+                        <div>
+                            <p>T-shirts</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/cart_6.png') }}"> </p>
-                    <div>
-                        <p>Chemises</p>
-                    </div>
+                    <a href="{{ path('need_homme_filter', {'filter': 'chemises'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/cart_6.png') }}"> </p>
+                        <div>
+                            <p>Chemises</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -134,40 +146,52 @@
             </div>
             <div class="card-content-categories">
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_1_f.png') }}"> </p>
-                    <div>
-                        <p>Chaussures</p>
-                    </div>
+                    <a href="{{ path('need_femme_filter', {'filter': 'chaussures'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_1_f.png') }}"> </p>
+                        <div>
+                            <p>Chaussures</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_2_f.png') }}"> </p>
-                    <div>
-                        <p>Jeans/Chinos</p>
-                    </div>
+                    <a href="{{ path('need_femme_filter', {'filter': 'jeans-chinos'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_2_f.png') }}"> </p>
+                        <div>
+                            <p>Jeans/Chinos</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_3_f.png') }}"> </p>
-                    <div>
-                        <p>Vestes</p>
-                    </div>
+                    <a href="{{ path('need_femme_filter', {'filter': 'vestes'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_3_f.png') }}"> </p>
+                        <div>
+                            <p>Vestes</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_4_f.png') }}"> </p>
-                    <div>
-                        <p>Robes/Jupes</p>
-                    </div>
+                    <a href="{{ path('need_femme_filter', {'filter': 'robes-jupes'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_4_f.png') }}"> </p>
+                        <div>
+                            <p>Robes/Jupes</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_5_f.png') }}"> </p>
-                    <div>
-                        <p>Pulls/Gilets</p>
-                    </div>
+                    <a href="{{ path('need_femme_filter', {'filter': 'pulls-gilets'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_5_f.png') }}"> </p>
+                        <div>
+                            <p>Pulls/Gilets</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="item-categories">
-                    <p class="container-img"><img src="{{ asset('img/card_6_f.png') }}"> </p>
-                    <div>
-                        <p>Chemises/Tops</p>
-                    </div>
+                    <a href="{{ path('need_femme_filter', {'filter': 'chemises-tops'}) }}">
+                        <p class="container-img"><img src="{{ asset('img/card_6_f.png') }}"> </p>
+                        <div>
+                            <p>Chemises/Tops</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
