--- a/app/Resources/views/produit.html.twig
+++ b/app/Resources/views/produit.html.twig
@@ -2,25 +2,58 @@
 
 {% block body %}
 
+    <h3 class="title-homme">{{ genre }} \ {{ type|capitalize }}</h3>
+
+    {{ dump(produit) }}
+    {{ dump(arrayTailles) }}
+
+
+
     <div id="container-all-product">
 
         <div class="container-selection-product">
-            <label onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_19c2cbed826e472f87aedd1d1753f339~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_19c2cbed826e472f87aedd1d1753f339~mv2.jpg"></label>
-            <label onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_113b8078487f409b94910930f52cd7ab~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_113b8078487f409b94910930f52cd7ab~mv2.jpg"></label>
-            <label onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_d390a437d59b4fd0a3ebd763b93e6565~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_d390a437d59b4fd0a3ebd763b93e6565~mv2.jpg"></label>
+            <label class="label-picture-product" onclick='changePreviewProduct("{{ asset( produit.image ) }}")'><img src="{{ asset( produit.image ) }}"></label>
+            <label class="label-picture-product" onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_113b8078487f409b94910930f52cd7ab~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_113b8078487f409b94910930f52cd7ab~mv2.jpg"></label>
+            <label class="label-picture-product" onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_d390a437d59b4fd0a3ebd763b93e6565~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_d390a437d59b4fd0a3ebd763b93e6565~mv2.jpg"></label>
         </div>
         <div class="container">
             <div class="row">
-                <article class="col-md-4">
+                <article class="img-product">
                     <div class="thumbnail item-product">
                         <div class="ex-thumbnail-zoom">
-                            <div class="ex-thumbnail-zoom-img" data-scale="3" data-image="https://static.wixstatic.com/media/3ad43d_19c2cbed826e472f87aedd1d1753f339~mv2.jpg"></div>
+                            <div class="ex-thumbnail-zoom-img" data-scale="3" data-image="{{ asset( produit.image ) }}"></div>
                         </div>
                     </div>
                 </article>
             </div>
         </div>
     </div>
+
+    <div>
+        <h2>Chinos slim fit</h2>
+        <p>{{ genre }}</p>
+        <p>{{ produit.prix }}</p>
+        <h3>Taille</h3>
+        <div></div>
+        {% for taille in arrayTailles  %}
+            <label for="{{ taille.taille }}">{{ taille.taille }}</label>
+            <input type="radio" name="taille" id="{{ taille.taille }}" value="{{ taille.taille }}">
+        {% endfor %}
+
+        <button type="submit" class="btn btn-primary submit-btn-contact">Ajouter au panier</button>
+
+        <h3>information</h3>
+        <div></div>
+        <p>{{ produit.description }}</p>
+
+
+    </div>
+
+
+
+
+
+
 
     <script src="{{ asset('js/product.js') }}" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
