--- a/app/Resources/views/produit.html.twig
+++ b/app/Resources/views/produit.html.twig
@@ -2,26 +2,20 @@
 
 {% block body %}
 
-    <h3 class="title-homme">{{ genre }} \ {{ type|capitalize }}</h3>
-
-    {{ dump(produit) }}
-    {{ dump(arrayTailles) }}
-
-
-
+    <h3 class="title-homme">{{ genre }} \ {{ type|capitalize }} \ {{ produit.description|capitalize }}</h3>
     <div id="container-all-product">
-
         <div class="container-selection-product">
-            <label class="label-picture-product" onclick='changePreviewProduct("{{ asset( produit.image ) }}")'><img src="{{ asset( produit.image ) }}"></label>
-            <label class="label-picture-product" onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_113b8078487f409b94910930f52cd7ab~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_113b8078487f409b94910930f52cd7ab~mv2.jpg"></label>
-            <label class="label-picture-product" onclick='changePreviewProduct("https://static.wixstatic.com/media/3ad43d_d390a437d59b4fd0a3ebd763b93e6565~mv2.jpg")'><img src="https://static.wixstatic.com/media/3ad43d_d390a437d59b4fd0a3ebd763b93e6565~mv2.jpg"></label>
+            {% set images = produit.image|split(',') %}
+            {%  for image in images %}
+                <label class="label-picture-product" onclick='changePreviewProduct("{{ asset(image) }}")'><img src="{{ asset( image ) }}"></label>
+            {% endfor %}
         </div>
         <div class="container">
             <div class="row">
                 <article class="img-product">
                     <div class="thumbnail item-product">
                         <div class="ex-thumbnail-zoom">
-                            <div class="ex-thumbnail-zoom-img" data-scale="3" data-image="{{ asset( produit.image ) }}"></div>
+                            <div class="ex-thumbnail-zoom-img" data-scale="3" data-image="{{ asset( images[0] ) }}"></div>
                         </div>
                     </div>
                 </article>
@@ -30,30 +24,24 @@
     </div>
 
     <div>
-        <h2>Chinos slim fit</h2>
-        <p>{{ genre }}</p>
-        <p>{{ produit.prix }}</p>
-        <h3>Taille</h3>
-        <div></div>
-        {% for taille in arrayTailles  %}
-            <label for="{{ taille.taille }}">{{ taille.taille }}</label>
-            <input type="radio" name="taille" id="{{ taille.taille }}" value="{{ taille.taille }}">
-        {% endfor %}
-
-        <button type="submit" class="btn btn-primary submit-btn-contact">Ajouter au panier</button>
-
-        <h3>information</h3>
-        <div></div>
-        <p>{{ produit.description }}</p>
-
-
+        <h2 class="title-product margin-product">{{ produit.description}}</h2>
+        <p class="genre-product margin-product">{{ genre }}</p>
+        <p class="margin-product price-product">{{ produit.prix }} €</p>
+        <h3 class="margin-product title-block-product">Taille</h3>
+        <div class="margin-product">
+            {% for taille in arrayTailles  %}
+                <label id="l{{ taille.taille }}" class="{% if ("/" in taille.taille) == true %}  items-taille-product {% endif %}item-taille-product-without-slash" for="{{ taille.taille }}">{{ taille.taille|upper }}</label>
+                <input onclick="test(this)" class="radio-button-taille" type="radio" name="taille" id="{{ taille.taille }}" value="{{ taille.taille }}">
+            {% endfor %}
+        </div>
+        <div class="add-shopping-cart-product">
+            <button type="submit" class="btn btn-primary submit-btn-contact item-add-shopping-cart-product"><strong>Ajouter au panier</strong></button>
+        </div>
+        <h3 class="margin-product title-block-product">Information</h3>
+        <div class="margin-product">
+            <p>{{ produit.description }}</p>
+        </div>
     </div>
-
-
-
-
-
-
 
     <script src="{{ asset('js/product.js') }}" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
